# owsd-tiny

./: .gitignore  CMakeLists.txt  LICENSE  README.md  owd.files  owd.includes
client-poc/: CMakeLists.txt  README.txt
client-poc/src/: actions.h  common.h  main.c  wifiimport.c  wifiimport.h  wsubus-blinkwps.c  wsubus-stubproxy.c  wsubus-wifiimport.c  wsubus.c
cmake/modules/: FindLIBUBOX.cmake  Findlibwebsockets.cmake
openwrt/libwebsockets-static/: Makefile
openwrt/libwebsockets-tiny/: Makefile
openwrt/owsd/: Makefile
openwrt/owsd/files/: owsd.config  owsd.init
res/: cert.pem  key.pem  make-cert-hierarchy.sh  owsd-test.json
res/webdemo/: index.html  script.js  style.css
src/: access_check.c  access_check.h  actions.c  common.h  dbus-io.c  dbus-io.h  dbus_rpc_call.c  dbus_rpc_call.h  dbus_rpc_list.c  dbus_rpc_list.h  dubus_conversions.h  dubus_conversions_names.c  dubus_conversions_types.c  local_stub.c  local_stub.h  main.c  owsd-config.in.h  rpc.c  rpc.h  rpc_call.c  rpc_call.h  rpc_call_dbus.h  rpc_call_ubus.h  rpc_list.c  rpc_list.h  rpc_list_dbus.c  rpc_list_dbus.h  rpc_list_ubus.h  rpc_login.c  rpc_login.h  rpc_sub.c  rpc_sub.h  ubusx_acl.c  ubusx_acl.h  util_dbus.c  util_dbus.h  util_jsonrpc.c  util_jsonrpc.h  util_ubus_blob.h  ws_http.c  (+19 more)
test/: client.js  client_interactive.js  config-local.js  config-openwrtdevice.js  config.js  package.json  test-local.txt  test-openwrtdevice.txt  test.txt
