cmake_minimum_required(VERSION 2.6)
PROJECT(wsclient)
ADD_DEFINITIONS(-Os -Wall --std=gnu99 -D_XOPEN_SOURCE=700 )

INCLUDE_DIRECTORIES(include)

SET(CMAKE_EXECUTABLE_LINK_C_FLAGS "")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")

SET(SOURCES
	src/main.c
	src/wsubus.c
	src/actions.c
	)

ADD_EXECUTABLE(wsclient ${SOURCES})

FIND_LIBRARY(ubus NAMES ubus)
FIND_LIBRARY(ubox NAMES ubox)
FIND_LIBRARY(json NAMES json-c)
FIND_LIBRARY(blobmsg_json NAMES blobmsg_json)
TARGET_LINK_LIBRARIES(wsclient ${ubox} ${ubus} ${json} ${blobmsg_json})

FIND_PACKAGE(libwebsockets REQUIRED)
INCLUDE_DIRECTORIES(${LIBWEBSOCKETS_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(wsclient ${LIBWEBSOCKETS_LIBRARIES})

SET_TARGET_PROPERTIES(wsclient PROPERTIES OUTPUT_NAME wsclient PREFIX "")
INSTALL(TARGETS wsclient RUNTIME DESTINATION usr/bin)
